6th commit. Rewrite slider by tiny-slider. Responsive markup hasn	 been done.

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -50,8 +52,8 @@
             </div>
 
         </div>
-    </div>
-    <div class="advantage">
+    </section>
+    <section class="advantage">
         <div class="container">
             <h2 class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantage__icons">
@@ -77,10 +79,9 @@
                 </div>
             </div>
             </div>
-
-        </div>
+        </section>
     </div>
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">Получите бесплатную консультацию <br>
                 по подбору пульсометра 
@@ -96,7 +97,33 @@
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>>
         </div>
-    </div>
+    </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div class="carousel__slide">
+                    <img src="img/carousel/slide1.jpg" alt="1">
+                </div>
+                <div class="carousel__slide">
+                    <img src="img/carousel/slide2.jpg" alt="2">
+                </div>
+                <div class="carousel__slide">
+                    <img src="img/carousel/slide3.jpg" alt="3">
+                </div>
+            </div>
+            <button type="button" class="prev">
+                <img src="icons/carousel/left.svg"></button>
+            <button type="button" class="next">
+                <img src="icons/carousel/right.svg"></button>
+        </div>
+    </section>
     
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 </html>
+
