--- a/src/index.html
+++ b/src/index.html
@@ -414,6 +414,20 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <!-- <div class="footer__map"></div> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.666145452456!2d30.520630949599727!3d50.447318932696355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce56ba8424ad%3A0x1266593df5b03ac0!2z0JHQvtGH0LrQsCBQVUI!5e0!3m2!1sen!2sua!4v1663258110783!5m2!1sen!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">вулиця Хрещатик, 19a, Київ, 01001</address>
+            <a class="footer__phone" href="tel:0675087193">067 508 71 93</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/footer/fb2.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/inst.svg" alt="instagramm"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/pint.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
