Commit 15. Added custom animation at section advantage; install plugins for section feedback for their fadein

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
 
@@ -98,6 +99,7 @@
             </form>>
         </div>
     </section>
+
     <section class="carousel">
         <div class="container">
             <div class="carousel__inner">
@@ -365,11 +367,12 @@
             </div>
         </div>
     </section>
+
     <section class="feedback">
         <div class="container">
             <h2 class="feedback__header">отзывы клиентов</h2>
             <div class="feedback__content">
-                <div class="feedback__item">
+                <div class="feedback__item wow animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                     <div class="feedback__img">
                         <img src="img/feedback/1.jpg" alt="girl1">
                     </div>
@@ -384,7 +387,7 @@
                         Спасибо, RunSmart! 
                     </div>
                 </div>
-                <div class="feedback__item">
+                <div class="feedback__item wow animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                     <div class="feedback__img">
                         <img src="img/feedback/2.jpg" alt="guy">
                     </div>
@@ -397,7 +400,7 @@
                         С ними подготовился к своему первому полумарафону! Спасибо!!! 
                     </div>
                 </div>
-                <div class="feedback__item">
+                <div class="feedback__item wow animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                     <div class="feedback__img">
                         <img src="img/feedback/3.jpg" alt="girl2">
                     </div>
@@ -469,6 +472,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 
 </body>
